cabal-version:         2.2
name:                  gogol-analyticsdata
version:               1.0.0
synopsis:              Google Analytics Data SDK.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay+gogol@gmail.com>
copyright:             Copyright (c) 2015-2022 Brendan Hay
category:              Google
build-type:            Simple
extra-source-files:    README.md src/.gitkeep
description:
    Accesses report data in Google Analytics.
  .
  /Warning:/ This is an experimental prototype/preview release which is still
  under exploratory development and not intended for public use, caveat emptor!
  .
  This library is compatible with version @v1beta@
  of the API.

source-repository head
  type:     git
  location: git://github.com/brendanhay/gogol.git
  subdir:   gogol-analyticsdata

flag field-selectors
  description: If record field selectors should be enabled. Disabling this requires GHC >=9.2 and the NoFieldSelectors extension.
  default: False
  manual: True

library
  default-language:  Haskell2010
  hs-source-dirs:    src gen

  ghc-options:
    -Wall
    -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates
    -funbox-strict-fields
    -fwarn-unused-packages

  if !flag(field-selectors) && impl(ghc >= 9.2)
    default-extensions: NoFieldSelectors

  exposed-modules:
      Gogol.AnalyticsData
    , Gogol.AnalyticsData.Properties.BatchRunPivotReports
    , Gogol.AnalyticsData.Properties.BatchRunReports
    , Gogol.AnalyticsData.Properties.CheckCompatibility
    , Gogol.AnalyticsData.Properties.GetMetadata
    , Gogol.AnalyticsData.Properties.RunPivotReport
    , Gogol.AnalyticsData.Properties.RunRealtimeReport
    , Gogol.AnalyticsData.Properties.RunReport
    , Gogol.AnalyticsData.Types

  other-modules:
      Gogol.AnalyticsData.Internal.Product
    , Gogol.AnalyticsData.Internal.Sum

  build-depends:
      gogol-core ^>= 1.0.0
    , base       >=  4.12 && < 5
